--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
@@ -6,6 +6,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.AspNet.SignalR.Client" Version="2.4.1" />
 	  <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.3" />
 	  <PackageReference Include="System.Text.Encodings.Web" Version="5.0.0" />
 	</ItemGroup>
